[gd_scene load_steps=7 format=3 uid="uid://7cgcw8yhnqum"]

[ext_resource type="Script" path="res://menu.gd" id="1_l3bue"]
[ext_resource type="Texture2D" uid="uid://c1rjmyxyn2omr" path="res://UI/Card X102.png" id="2_038kd"]
[ext_resource type="Theme" uid="uid://dva1lk32kcccy" path="res://UI/jurl-theme.tres" id="3_bufcu"]
[ext_resource type="Texture2D" uid="uid://b4il24fp58eqc" path="res://UI/keyboardicon.png" id="4_u8pjt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ylugh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ca1ak"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Node2D" type="Node2D"]
script = ExtResource("1_l3bue")

[node name="CardX102" type="Sprite2D" parent="."]
position = Vector2(961.75, 546.75)
scale = Vector2(1.74704, 1.59897)
texture = ExtResource("2_038kd")

[node name="StartGameButton" type="Button" parent="."]
offset_left = 568.0
offset_top = 456.0
offset_right = 1336.0
offset_bottom = 656.0
focus_neighbor_top = NodePath("../AboutButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../AboutButton")
theme = ExtResource("3_bufcu")
theme_override_font_sizes/font_size = 68
theme_override_styles/normal = SubResource("StyleBoxFlat_ylugh")
text = "START GAME"

[node name="AboutButton" type="Button" parent="."]
offset_left = 568.0
offset_top = 224.0
offset_right = 1336.0
offset_bottom = 424.0
focus_neighbor_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
theme = ExtResource("3_bufcu")
theme_override_font_sizes/font_size = 68
theme_override_styles/normal = SubResource("StyleBoxFlat_ylugh")
text = "ABOUT"

[node name="OptionsButton" type="Button" parent="."]
offset_left = 568.0
offset_top = 688.0
offset_right = 1336.0
offset_bottom = 888.0
focus_neighbor_top = NodePath("../StartGameButton")
focus_previous = NodePath("../StartGameButton")
theme = ExtResource("3_bufcu")
theme_override_font_sizes/font_size = 68
theme_override_styles/normal = SubResource("StyleBoxFlat_ylugh")
text = "OPTIONS"

[node name="Redefine" type="Button" parent="."]
offset_left = 1480.0
offset_top = 416.0
offset_right = 1744.0
offset_bottom = 680.0
theme = ExtResource("3_bufcu")
theme_override_styles/normal = SubResource("StyleBoxFlat_ca1ak")
icon = ExtResource("4_u8pjt")

[node name="VersionLabel" type="Label" parent="."]
offset_left = 1232.0
offset_top = 976.0
offset_right = 1840.0
offset_bottom = 1009.0
theme = ExtResource("3_bufcu")
theme_override_font_sizes/font_size = 30
text = "Tonsomo Entertainment v1.1"

[connection signal="pressed" from="StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Redefine" to="." method="_on_redefine_pressed"]
